# ayaka

./: .gitignore  LICENSE  README.md
akaya_raytracer/: CMakeLists.txt  main.cpp
akaya_raytracer/samples/: sample1.cpp
ayaka_pathreacer/: CMakeLists.txt  main.cpp
ayaka_pathtracer/: CMakeLists.txt  main.cpp
ayaka_pathtracer/opencv_viewer/: CMakeLists.txt  viewer.cpp  viewer.h
ayaka_pathtracer/src/: camera.h  frame_buffer.h  material.h  random.h  ray.h  shapes.h  world.h
ayaka_rasterizer/: CMakeLists.txt  README.md  main.cpp
ayaka_rasterizer/core/: camera.cpp  camera.h  material.h  mesh.cpp  mesh.h  model.cpp  model.h  particles.h  rasterizer.cpp  rasterizer.h  shader.cpp  shader.h  texture.cpp  texture.h  triangle.cpp  triangle.h  utils.h
ayaka_rasterizer/samples/: ayaka.cpp
ayaka_rasterizer/test/: test_model.cpp
